# Page-Analyzer

./: Makefile  README.md  database.sql  example.env  pyproject.toml
.github/workflows/: lint.yml
page_analyzer/: __init__.py  app.py  database.sql
page_analyzer/templates/: base.html  index.html  notfound.html  url.html  urls.html
