[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A web application that analyzes said pages for SEO suitability"
authors = ["Ruslan Zinnatov <rh26157@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
gunicorn = "^20.1.0"
flake8 = "^6.0.0"
validators = "^0.20.0"
requests = "^2.28.2"
bs4 = "^0.0.1"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
